Fixup white space to reflect module style

--- a/character/character.css
+++ b/character/character.css
@@ -51,7 +51,9 @@
     font-size: 105%;
     color: white;
     text-align: left;
-    overflow: hidden; text-overflow: ellipsis; white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 #level {
